# pizza-delivery-backend

./: Makefile  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 23fb2640c8fa_change_in_oter_item_table.py  3e7235912597_create_relation_between_user_and_order.py  500d5ab130f6_initial_migration.py  f3fe35f6ef09_initial_migration.py
app/: __init__.py  models.py
database/: banco.db
dependencies/: __init__.py
dependencies/core/: config.py  security.py
dependencies/db_session/: db_session.py
dependencies/schemas/: schemas.py
dependencies/security/: config.py  security.py
routes/: __init__.py  auth_routes.py  order_routes.py
